--- a/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -29,6 +30,15 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
+            <AnchorPane fx:id="getAdminTab" layoutX="322.0" layoutY="28.0" prefHeight="12.0" prefWidth="106.0" visible="false">
+               <children>
+                  <Label onMouseClicked="#getAdmin" text=" | ADMIN" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="getHome" layoutY="81.0" prefHeight="523.0" prefWidth="800.0" style="-fx-background-color: #00264d;" visible="false">
@@ -46,14 +56,20 @@
             <Label layoutX="14.0" layoutY="14.0" text="PROFILE" textFill="WHITE" />
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="getAdmin" layoutY="81.0" prefHeight="523.0" prefWidth="800.0" style="-fx-background-color: #00264d;" visible="false">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="ADMIN" textFill="WHITE" />
+         </children>
+      </AnchorPane>
       <AnchorPane fx:id="getLogin" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #003366;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="EnterLogin" layoutX="253.0" layoutY="276.0" prefHeight="100.0" prefWidth="300.0" visible="false">
+            <AnchorPane fx:id="EnterLogin" layoutX="253.0" layoutY="276.0" prefHeight="140.0" prefWidth="300.0" visible="false">
                <children>
                   <PasswordField fx:id="getPassword" layoutX="14.0" layoutY="60.0" promptText="Password" />
                   <TextField fx:id="getUsername" layoutX="14.0" layoutY="29.0" promptText="Username" />
                   <Button layoutX="213.0" layoutY="44.0" mnemonicParsing="false" onMouseClicked="#getLogin" text="Submit" />
                   <Label layoutX="14.0" layoutY="9.0" text="Login:" textFill="WHITE" />
+                  <RadioButton fx:id="AdminLogin" layoutX="14.0" layoutY="104.0" mnemonicParsing="false" text="Admin Login" textFill="WHITE" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="EnterCreateAccount" layoutX="253.0" layoutY="276.0" prefHeight="100.0" prefWidth="300.0" visible="false">
