--- a/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
@@ -44,6 +44,7 @@
       <AnchorPane fx:id="getHome" layoutY="81.0" prefHeight="523.0" prefWidth="800.0" style="-fx-background-color: #00264d;">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="HOME" textFill="WHITE" />
+            <Button layoutX="253.0" layoutY="191.0" mnemonicParsing="false" text="Button" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="getLibrary" layoutY="81.0" prefHeight="523.0" prefWidth="800.0" style="-fx-background-color: #00264d;" visible="false">
