--- a/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
@@ -56,7 +56,7 @@
                   <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </FlowPane>
-            <TextField layoutX="625.0" layoutY="31.0" />
+            <TextField layoutX="625.0" layoutY="31.0" promptText="Search" />
             <ChoiceBox layoutX="625.0" layoutY="67.0" prefHeight="27.0" prefWidth="161.0" />
             <TableView layoutX="14.0" layoutY="252.0" prefHeight="254.0" prefWidth="600.0">
               <columns>
