--- a/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/GameRentalView.fxml
@@ -51,14 +51,14 @@
             <Label layoutX="14.0" layoutY="14.0" text="Top Games" textFill="WHITE" />
             <FlowPane layoutX="14.0" layoutY="31.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imageView1" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imageView2" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imageView3" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </FlowPane>
-            <TextField layoutX="625.0" layoutY="31.0" promptText="Search" />
-            <ChoiceBox layoutX="625.0" layoutY="67.0" prefHeight="27.0" prefWidth="161.0" />
-            <TableView layoutX="14.0" layoutY="252.0" prefHeight="254.0" prefWidth="600.0">
+            <TextField fx:id="searchBar" layoutX="625.0" layoutY="31.0" promptText="Search" />
+            <ChoiceBox fx:id="filterChoiceBox" layoutX="625.0" layoutY="67.0" prefHeight="27.0" prefWidth="161.0" />
+            <TableView fx:id="gamesTableView" layoutX="14.0" layoutY="252.0" prefHeight="254.0" prefWidth="600.0">
               <columns>
                 <TableColumn prefWidth="75.0" text="Game" />
               </columns>
