--- a/src/com/peanutbutterdawg/gamerental/AdminView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/AdminView.fxml
@@ -35,22 +35,22 @@
         </Button>
     </AnchorPane>
     <AnchorPane layoutY="77.0" prefHeight="526.0" prefWidth="809.0" style="-fx-background-color: #00264d;">
-        <Button layoutX="39.0" layoutY="23.0" mnemonicParsing="false" onAction="#addGame" style="-fx-border-color: transparent; -fx-background-color: -fx-border-color;" text="Add or Remove Game Page" textAlignment="CENTER" textFill="WHITE">
+        <Button layoutX="39.0" layoutY="23.0" mnemonicParsing="false" onAction="#addGame" style="-fx-border-color: transparent; -fx-background-color: #00264d;" text="Add or Remove Game Page" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="24.0" />
             </font>
         </Button>
-        <Button layoutX="27.0" layoutY="111.0" mnemonicParsing="false" onAction="#createAdmin" prefHeight="47.0" prefWidth="311.0" style="-fx-border-color: transparent; -fx-background-color: -fx-border-color;" text="Create Admin Account" textAlignment="CENTER" textFill="WHITE">
+        <Button layoutX="27.0" layoutY="111.0" mnemonicParsing="false" onAction="#createAdmin" prefHeight="47.0" prefWidth="311.0" style="-fx-border-color: transparent; -fx-background-color: #00264d;" text="Create Admin Account" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="24.0" />
             </font>
         </Button>
-        <Button layoutX="38.0" layoutY="69.0" mnemonicParsing="false" onAction="#editGame" style="-fx-border-color: transparent; -fx-background-color: -fx-border-color;" text="Edit Game Page" textAlignment="CENTER" textFill="WHITE">
+        <Button layoutX="38.0" layoutY="69.0" mnemonicParsing="false" onAction="#editGame" style="-fx-border-color: transparent; -fx-background-color: #00264d;" text="Edit Game Page" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="24.0" />
             </font>
         </Button>
-        <AnchorPane fx:id="createAdminAccount" layoutX="411.0" layoutY="24.0" prefHeight="247.0" prefWidth="315.0" visible="false">
+        <AnchorPane fx:id="editGamePage" layoutX="411.0" layoutY="24.0" prefHeight="247.0" prefWidth="315.0" visible="false">
             <ComboBox layoutX="18.0" layoutY="41.0" prefHeight="27.0" prefWidth="252.0" promptText="Which game do you want to edit?" />
             <TextField layoutX="19.0" layoutY="81.0" promptText="New Name" />
             <TextField layoutX="19.0" layoutY="119.0" promptText="New Genre" />
@@ -80,7 +80,7 @@
                 </font>
             </Label>
         </AnchorPane>
-        <AnchorPane fx:id="editGamePage" layoutX="410.0" layoutY="18.0" prefHeight="279.0" prefWidth="380.0" visible="false">
+        <AnchorPane fx:id="createAdminAccount" layoutX="410.0" layoutY="18.0" prefHeight="279.0" prefWidth="380.0" visible="false">
             <TextField layoutX="20.0" layoutY="47.0" promptText="Admin Username" />
             <TextField layoutX="20.0" layoutY="86.0" promptText="Admin Password" />
             <Button layoutX="200.0" layoutY="85.0" mnemonicParsing="false" text="Create Admin Account" />
