--- a/src/com/peanutbutterdawg/gamerental/LibraryView.fxml
+++ b/src/com/peanutbutterdawg/gamerental/LibraryView.fxml
@@ -2,10 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="getLibrary" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #003366;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.peanutbutterdawg.gamerental.LibraryViewController">
@@ -35,29 +34,18 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Button>
-            <AnchorPane layoutY="81.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #00264d;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="81.0">
+            <AnchorPane layoutY="65.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #00264d;" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="65.0">
                <children>
-                  <Label layoutX="25.0" layoutY="4.0" text="My Games" textFill="WHITE" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="4.0" />
-                  <FlowPane layoutX="36.0" layoutY="35.0" orientation="VERTICAL" prefHeight="186.0" prefWidth="675.0" style="-fx-background-color: #003366;" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="30.0">
-                     <children>
-                        <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../../../img/RocketLeague.jpg" />
-                           </image></ImageView>
-                        <ImageView fitHeight="250.0" fitWidth="250.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../../../img/Skyrim.jpg" />
-                           </image></ImageView>
-                        <ImageView fitHeight="250.0" fitWidth="250.0" layoutX="235.0" layoutY="10.0" pickOnBounds="true">
-                           <image>
-                              <Image url="@../../../img/WoW.jpg" />
-                           </image></ImageView>
-                     </children>
-                  </FlowPane>
                   <Label fx:id="gameLimit" layoutX="695.0" layoutY="4.0" text="---" textFill="WHITE" />
-                  <Button layoutX="122.0" layoutY="280.0" mnemonicParsing="false" style="-fx-background-color: #00264d;" text="Play!" textFill="WHITE" />
-                  <Button layoutX="372.0" layoutY="280.0" mnemonicParsing="false" style="-fx-background-color: #00264d;" text="Play!" textFill="WHITE" AnchorPane.leftAnchor="372.0" />
-                  <Button layoutX="622.0" layoutY="280.0" mnemonicParsing="false" style="-fx-background-color: #00264d;" text="Play!" textFill="WHITE" />
+                  <TableView fx:id="tableView" layoutX="-1.0" layoutY="160.0" prefHeight="167.0" prefWidth="501.0">
+                    <columns>
+                      <TableColumn fx:id="column1" prefWidth="157.0" text="Title" />
+                      <TableColumn fx:id="column2" prefWidth="225.0" text="Genre" />
+                        <TableColumn fx:id="column3" prefWidth="59.0" text="Rating" />
+                        <TableColumn fx:id="column4" prefWidth="59.0" text="ESRB" />
+                    </columns>
+                  </TableView>
+                  <Button layoutX="610.0" layoutY="296.0" mnemonicParsing="false" text="Play Game!" />
                </children></AnchorPane>
          </children>
       </AnchorPane>
